--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -281,6 +281,91 @@ header.fixedHeader > div {
   @apply md:w-[2.96875vw] md:h-[2.96875vw] top-[unset] bottom-0;
 }
 
+.service-category:before {
+  @apply content-[""] w-[0] h-[3px] lg:h-[0.15625vw] bg-[#5EBD8E] absolute bottom-0 transition-all duration-[5s] ease-linear;
+}
+.service-category.active::before {
+  @apply w-full;
+}
+.rtl .service-category::before {
+  @apply right-0;
+}
+.ltr .service-category::before {
+  @apply left-0;
+}
+
+/* News STart */
+
+.news__Content ul li::before {
+  @apply content-[""] rounded-full absolute  w-[8px] h-[8px]  md:w-[0.6vw] md:h-[0.6vw] bg-[#333] top-[50%] transform translate-y-[-50%];
+}
+
+.rtl .news__Content ul li::before {
+  @apply right-[-16px] md:right-[-1.2vw];
+}
+.ltr .news__Content ul li::before {
+  @apply left-[-16px] left-[-1.2vw];
+}
+
+.news__Content {
+  @apply flex flex-col md:gap-y-[1.66666666667vw] gap-y-[18px]
+  md:pt-[2.08333333333vw] 
+  pt-[30px];
+}
+.news__Content p {
+  @apply text24 text-[#4A4A4A];
+}
+.news__Content ul {
+  @apply flex flex-col md:gap-y-[1.66666666667vw] gap-y-[18px]  px-[16px] md:px-[1vw];
+}
+.news__Content img {
+  @apply w-[120px] mx-[auto];
+}
+/* .news__Content blockquote {
+  @apply heading1 text-[red];
+}
+.news__Content ul li a {
+  @apply heading2 text-[#234a55];
+} */
+.news__Content ul li {
+  @apply flex relative;
+}
+.news__Content ul li img {
+  @apply w-[50px];
+}
+.news__Content a {
+  @apply text29 text-[#4fe0ae] underline underline-offset-[2px];
+}
+.news__Content table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: white;
+}
+.news__Content table {
+  @apply rounded-[14px] md:rounded-[1vw];
+}
+.news__Content th,
+.news__Content td {
+  border: 1px solid #eee; /* Add a light gray border */
+}
+
+.news__Content th,
+.news__Content td {
+  @apply p-[14px] md:rounded-[1vw];
+}
+.news__Content th {
+  background-color: #4fe0a3; /* Set the header background color to green */
+  color: white; /* Set text color for header cells */
+}
+
+/* Add hover effect for table rows */
+.news__Content tr:hover {
+  background-color: #f5f5f5; /* Light gray background on hover */
+  cursor: pointer;
+}
+
+/* News End */
+
 /* MEDIA QUERIES  */
 
 @media (min-width: 1024px) {
